# desktop-pet

./: .gitignore  CLAUDE.md  README.md  SPEC.md  ai-settings.html  bubble.html  chat-preview.html  chat.html  design-preview.html  index.html  package-lock.json  package.json  pet-import.html  spec.md  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/skills/: hatch-pet
.github/workflows/: release.yml
docs/plans/: 2026-05-19-autonomous-roaming.md  2026-05-19-cc-hook-integration.md  2026-05-20-bongo-keyboard-rdev.md
docs/specs/: 2026-05-19-autonomous-roaming-design.md  2026-05-19-cc-hook-integration-design.md  2026-05-20-bongo-keyboard-rdev-design.md
scripts/: extend_bongo_frames.py  generate_bongo_frames.py  generate_icons.py  pixelate_spritesheet.py  rightcodes_image_gen.py  true_pixelate.py
src/: ai-settings-main.ts  app.ts  assets.d.ts  bubble-main.ts  chat-main.ts  interactions.ts  main.ts  pet-import-main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/cat/: pet.json
src-tauri/src/: ai.rs  cc_hooks.rs  db.rs  lib.rs  pets.rs
src-tauri/src/bongo/: classifier.rs  keyboard.rs  mod.rs  monitor.rs
src/ai/: chat.ts
src/characters/: catalog.ts
src/engine/: animator.ts  behavior.ts  (+3 more)
tests/: animator.test.ts  appmenu.test.ts  behavior.test.ts  bubble.test.ts  cat-generator.test.ts  catalog.test.ts  contextmenu.test.ts  integration.test.ts  interactions.test.ts  loader.test.ts  renderer.test.ts
(+19 files in other folders)
